wip-document-type
Work in progress per aggiunta della gestione entity ESFDocumentType e ESFPublicAuthority

--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -1047,3 +1047,5 @@ selected-year=Please type year to filter on
 startDate=Start date
 endDate=End date
 specific=Specific
+
+add-document-type=Add Document Type
