Revisione Query Custom

--- a/esf-fitav-portlet/docroot/WEB-INF/sql/indexes.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/sql/indexes.properties
@@ -31,6 +31,7 @@ IX_799F0FA4=ESFCity.C_R_P
 IX_872902E8=ESFCity.Name
 
 IX_A3F45DD4=ESFCodeOrg.N_C
+IX_421974CF=ESFCodeOrg.Uuid
 
 IX_38B1C198=ESFConfiguration.ESFKey
 IX_A389EE66=ESFConfiguration.GroupId
@@ -42,6 +43,7 @@ IX_A9ED1C50=ESFDeparture.esfMatchId_C_L_L_C_D
 
 IX_3591F322=ESFDescription.Description
 IX_BC099BBA=ESFDescription.IsNational
+IX_D87ED82A=ESFDescription.Uuid
 
 IX_50A20689=ESFDocument.Code
 IX_E3752272=ESFDocument.T_U
@@ -159,7 +161,10 @@ IX_D46AD82C=ESFMatchType.findByDescription
 
 IX_26C7E6CE=ESFNational.E_E
 IX_943E6DA9=ESFNational.EndDate
+IX_35D135E6=ESFNational.UUID_G
 IX_2EEDF0C5=ESFNational.U_E
+IX_3586AB44=ESFNational.Uuid
+IX_CCDA6664=ESFNational.Uuid_C
 IX_8B9F8ACE=ESFNational.byStartDateEndDateTypeSportId
 
 IX_1ED69CD4=ESFNationalDelegation.ESFMatch
@@ -177,7 +182,10 @@ IX_29869A52=ESFNationalDelegation.PartcipanType_MAtchId_SportId
 IX_99E6B19=ESFNationalDelegation.PartcipanType_MatchId_SportTypeId
 IX_185C2B6=ESFNationalDelegation.PartecipantType_EsfUserId
 IX_99E6B19=ESFNationalDelegation.PartecipantType_MatchId_SportTypeId
+IX_4087B0AE=ESFNationalDelegation.UUID_G
 IX_3AA363DF=ESFNationalDelegation.U_L
+IX_C23D6F7C=ESFNationalDelegation.Uuid
+IX_3DD4F2C=ESFNationalDelegation.Uuid_C
 
 IX_BA1CFF1A=ESFNationalMatchResult.ESFMatchId
 IX_A25F763F=ESFNationalMatchResult.ESFMatchId_ESFSportTypeId
@@ -219,6 +227,8 @@ IX_84BEA357=ESFPartecipant.Uuid
 IX_4FA6B471=ESFPartecipant.Uuid_C
 
 IX_87429A21=ESFPartecipantInfo.FirstName_L_P
+
+IX_182988BD=ESFPartecipantType.Uuid
 
 IX_B354063A=ESFProvince.C_R
 IX_1021F1BC=ESFProvince.CountryProvinceName
@@ -300,6 +310,7 @@ IX_1E601C1E=ESFState.Name
 
 IX_81AAA5C2=ESFStateAssEntity.ClassName
 IX_8716A199=ESFStateAssEntity.ESFStateId
+IX_CD5037E3=ESFStateAssEntity.Uuid
 
 IX_9F16B53=ESFSuspensiveShootingDirector.Date
 IX_FC5768B4=ESFSuspensiveShootingDirector.byUserId
@@ -362,3 +373,5 @@ IX_D710E7DC=ESFgunUser.byT
 IX_F709140D=ESFgunUser.byU_C
 IX_8C0C93A0=ESFgunUser.byU_T
 IX_620C7495=ESFgunUser.byUserId
+
+IX_19A88904=esforganization.FindOrganizationByType
