svil-document-type
Terminate le operazioni di creazione e modifica sull'entity ESFDocumentType

--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -1049,3 +1049,5 @@ endDate=End date
 specific=Specific
 
 add-document-type=Add Document Type
+document-type-desc=Description
+document-type-expiration=Months Notice
