svil-document-type-delete
Aggiunta cancellazione del tipo documento con controllo preventivo se ci sono dei documenti associati

--- a/esf-fitav-portlet/docroot/WEB-INF/sql/indexes.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/sql/indexes.properties
@@ -44,6 +44,7 @@ IX_3591F322=ESFDescription.Description
 IX_BC099BBA=ESFDescription.IsNational
 
 IX_50A20689=ESFDocument.Code
+IX_39A403FF=ESFDocument.EsfDocumentTypeId
 IX_E3752272=ESFDocument.T_U
 IX_6613DE06=ESFDocument.U_ED
 IX_BCA7F2D5=ESFDocument.esfUserId
