--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -1047,7 +1047,14 @@ selected-year=Please type year to filter on
 startDate=Start date
 endDate=End date
 specific=Specific
-
+##############################
+#Document Type MSG
+##############################
 add-document-type=Add Document Type
 document-type-desc=Description
 document-type-expiration=Months Notice
+expirationMonthsNotice=Monhts Notice
+success-document-type-persist=Document Type saved
+success-document-type-delete=Document Type deleted
+error-document-type-persist=Document Type save failed
+error-document-type-delete-impossible=One or more Document has this Document Type associated, could not perform delete
