--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -1047,6 +1047,8 @@ selected-year=Please type year to filter on
 startDate=Start date
 endDate=End date
 specific=Specific
+
+error-federal-role=Problem during save of Federal Role
 ##############################
 #Document Type MSG
 ##############################
@@ -1058,15 +1060,6 @@ success-document-type-persist=Document Type saved
 success-document-type-delete=Document Type deleted
 error-document-type-persist=Document Type save failed
 error-document-type-delete-impossible=One or more Document has this Document Type associated, could not perform delete
-<<<<<<< HEAD
-expirationMonthsNotice=Monhts Notice
-success-document-type-persist=Document Type saved
-success-document-type-delete=Document Type deleted
-error-document-type-persist=Document Type save failed
-error-document-type-delete-impossible=One or more Document has this Document Type associated, could not perform delete
-=======
->>>>>>> 4e2f23245d33f5cc80bffcdd36acf34e75accc38
-
 ##############################
 #Public Authority MSG
 ##############################
@@ -1076,8 +1069,4 @@ public-authority-desc=Description
 success-public-authority-persist=Public Authority saved
 success-public-authority-delete=Public Authority deleted
 error-public-authority-persist=Public Authority save failed
-<<<<<<< HEAD
 error-public-authority-delete-impossible=One or more Document has this Public Authority associeted, could not perform delete
-=======
-error-public-authority-delete-impossible=One or more Document has this Public Authority associeted, could not perform delete
->>>>>>> 4e2f23245d33f5cc80bffcdd36acf34e75accc38
