--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -724,7 +724,9 @@ referee = Referee
 no-delegation-were-found=No National Shooter found
 esfBrand-reference-error=Brand already used in another field
 esfElectronic-reference-error=Electronic already used in another field
-match-success-insertupdate=Match added
+match-success-insert=Match added
+match-success-update=Match updated
+match-error-operation=Problem during Match save
 date-message=Start Date must be lower than End Date
 code-null-message=Error occured while generating code. Be sure to select Region and/or Province
 address-organizzation-obl-p=Main Organization Address
