--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -724,7 +724,9 @@ referee = Referee
 no-delegation-were-found=No National Shooter found
 esfBrand-reference-error=Brand already used in another field
 esfElectronic-reference-error=Electronic already used in another field
-match-success-insertupdate=Match added
+match-success-insert=Match added
+match-success-update=Match updated
+match-error-operation=Problem during Match save
 date-message=Start Date must be lower than End Date
 code-null-message=Error occured while generating code. Be sure to select Region and/or Province
 address-organizzation-obl-p=Main Organization Address
@@ -1047,6 +1049,8 @@ selected-year=Please type year to filter on
 startDate=Start date
 endDate=End date
 specific=Specific
+
+error-federal-role=Problem during save of Federal Role
 ##############################
 #Document Type MSG
 ##############################
@@ -1058,15 +1062,6 @@ success-document-type-persist=Document Type saved
 success-document-type-delete=Document Type deleted
 error-document-type-persist=Document Type save failed
 error-document-type-delete-impossible=One or more Document has this Document Type associated, could not perform delete
-<<<<<<< HEAD
-expirationMonthsNotice=Monhts Notice
-success-document-type-persist=Document Type saved
-success-document-type-delete=Document Type deleted
-error-document-type-persist=Document Type save failed
-error-document-type-delete-impossible=One or more Document has this Document Type associated, could not perform delete
-=======
->>>>>>> 4e2f23245d33f5cc80bffcdd36acf34e75accc38
-
 ##############################
 #Public Authority MSG
 ##############################
@@ -1076,8 +1071,4 @@ public-authority-desc=Description
 success-public-authority-persist=Public Authority saved
 success-public-authority-delete=Public Authority deleted
 error-public-authority-persist=Public Authority save failed
-<<<<<<< HEAD
 error-public-authority-delete-impossible=One or more Document has this Public Authority associeted, could not perform delete
-=======
-error-public-authority-delete-impossible=One or more Document has this Public Authority associeted, could not perform delete
->>>>>>> 4e2f23245d33f5cc80bffcdd36acf34e75accc38
