--- a/esf-fitav-portlet/docroot/WEB-INF/sql/indexes.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/sql/indexes.properties
@@ -141,13 +141,16 @@ IX_DD551185=ESFMatch.Date_Code
 IX_36D02C39=ESFMatch.Description
 IX_3013E9F1=ESFMatch.EventType
 IX_6DA4124A=ESFMatch.IsChangeCategory
+IX_C142F0F=ESFMatch.LikeCode
 IX_C1A2041=ESFMatch.MatchStartDate_T_A_D_N
 IX_C1A2041=ESFMatch.MatchStartDate_t_A_D_N
 IX_99B28E49=ESFMatch.MatchTypeId
+IX_9325C91F=ESFMatch.MatchYear
 IX_2B3BC749=ESFMatch.UUID_G
 IX_9C1A31FD=ESFMatch.UserId_IsNat
 IX_CEC76E81=ESFMatch.Uuid
 IX_11E62B07=ESFMatch.Uuid_C
+IX_34F70AF0=ESFMatch.YearCode
 IX_C1A2041=ESFMatch.findByMatchStartDate_t_A_D_N
 IX_99B28E49=ESFMatch.findbyMatchTypeid
 IX_C4756806=ESFMatch.myMatch
