--- a/esf-fitav-portlet/docroot/WEB-INF/src/service.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/service.properties
@@ -13,14 +13,9 @@
 ##
 
     build.namespace=ESF
-<<<<<<< HEAD
     build.number=1070
-    build.date=1558366403373
-=======
-    build.number=1069
-    build.date=1558716294236
->>>>>>> 4e2f23245d33f5cc80bffcdd36acf34e75accc38
-    build.auto.upgrade=true
+    build.date=1560518805098
+    build.auto.upgrade=false
 
 ##
 ## Spring
