Rettifica autoupdate service.properties disabilita aggiornamento automatico

--- a/esf-fitav-portlet/docroot/WEB-INF/src/service.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/service.properties
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 ##
 ## Properties Override
 ##
@@ -14,9 +13,9 @@
 ##
 
     build.namespace=ESF
-    build.number=1070
-    build.date=1560518805098
-    build.auto.upgrade=false
+    build.number=1071
+    build.date=1560530463425
+    build.auto.upgrade=true
 
 ##
 ## Spring
@@ -39,46 +38,4 @@
         \
         WEB-INF/classes/META-INF/shard-data-source-spring.xml,\
         \
-=======
-##
-## Properties Override
-##
-
-    #
-    # Specify where to get the overridden properties. Updates should not be made
-    # on this file but on the overridden version of this file.
-    #
-    include-and-override=${base.path}/service-ext.properties
-
-##
-## Build
-##
-
-    build.namespace=ESF
-    build.number=1070
-    build.date=1560518805098
-    build.auto.upgrade=false
-
-##
-## Spring
-##
-
-    #
-    # Input a list of comma delimited Spring configurations. These will be
-    # loaded after the bean definitions specified in the
-    # portalContextConfigLocation parameter in web.xml.
-    #
-    spring.configs=\
-        WEB-INF/classes/META-INF/base-spring.xml,\
-        \
-        WEB-INF/classes/META-INF/hibernate-spring.xml,\
-        WEB-INF/classes/META-INF/infrastructure-spring.xml,\
-        \
-        WEB-INF/classes/META-INF/cluster-spring.xml,\
-        \
-        WEB-INF/classes/META-INF/portlet-spring.xml,\
-        \
-        WEB-INF/classes/META-INF/shard-data-source-spring.xml,\
-        \
->>>>>>> b453713ffcffafc729c2bf2b1d394e44a555e659
         WEB-INF/classes/META-INF/ext-spring.xml
