- Girato il service builder per aggiunta di un finder
- Aggiunta la generazione di messaggi di successo e errore

- Implementato l'ordinamento della lista tiratori tesserati in aggiungi
  direttori di tiro

- Implementata la visualizzazione dell'ultima nomina aggiunta nella view
  quando si aggiunge una nuova nomina al direttore di tiro

--- a/esf-fitav-portlet/docroot/WEB-INF/sql/indexes.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/sql/indexes.properties
@@ -385,3 +385,5 @@ IX_ED8BB4AF=VW_ESFListaIncarichi.organizzazione
 IX_19A88904=esforganization.FindOrganizationByType
 
 IX_7ED85A60=vw_datidirettoretiro.esfShootingDirectorId
+
+IX_A055F35D=vw_nominedirettoritiro.IdDirettore
