Riscritta e resa funzionante in ogni sua parte l'Associazione degli azzurri al raduno
Cambiata la funzione di gestione della ricerca e le classi del
ServiceBuilder relative al Task

--- a/esf-fitav-portlet/docroot/WEB-INF/sql/indexes.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/sql/indexes.properties
@@ -239,6 +239,7 @@ IX_1FED4786=ESFRaduno.findByCode
 IX_C8556021=ESFRaduno.findRaduno
 
 IX_CC0BF1BA=ESFRadunoAzzurri.FindByid_esf_raduno
+IX_CC0BF1BA=ESFRadunoAzzurri.findByIdRaduno
 IX_CC0BF1BA=ESFRadunoAzzurri.findByRaduno
 IX_96378273=ESFRadunoAzzurri.findByesfNationalId
 IX_41BCE87B=ESFRadunoAzzurri.findRadunoAzzurri
