--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -135,7 +135,7 @@ DT*= technical director
 issf_role = issf role
 national-match-results = national match results
 run = run
-select_years_earlier = select years earlier
+select_years_earlier=Select year
 Board_of_year = Board of year
 affiliates = affiliates
 add-esf-configuration = add esf configuration
@@ -172,7 +172,6 @@ n-bersaglio=n-bersaglio
 elenco-associazioni-report=elenco-associazioni-report
 elenco-country-report=elenco-country-report
 elenco-sede-report=elenco-sede-report
-event site=event site
 elenco-descrizioni-report=elenco-descrizioni-report
 elenco-tipo-match-report=elenco-tipo-match-report
 elenco-tipo-sport-report=elenco-tipo-sport-report
@@ -583,7 +582,7 @@ isChangeCategory=isChangeCategory
 choose-type-of-event = choose type of event
 Olimpic-Match = Olympic Match
 National-Match = National Match
-Event = Event
+Event=Event
 speciality  = speciality 
 OrganizatioHistory = Organization History
 organization-code=Organization Code
@@ -1073,3 +1072,5 @@ success-public-authority-persist=Public Authority saved
 success-public-authority-delete=Public Authority deleted
 error-public-authority-persist=Public Authority save failed
 error-public-authority-delete-impossible=One or more Document has this Public Authority associeted, could not perform delete
+
+assign-entity=Assign Entity
