fix-ripristino-conf
ripristino pagina di configurazione ESFNationalMatchPortlet

--- a/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/content/Language.properties
@@ -1074,3 +1074,5 @@ error-public-authority-persist=Public Authority save failed
 error-public-authority-delete-impossible=One or more Document has this Public Authority associeted, could not perform delete
 
 assign-entity=Assign Entity
+olimpicMatch=Olimpic Match
+nationalMatch=National Match
