--- a/esf-fitav-portlet/docroot/WEB-INF/src/service.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/src/service.properties
@@ -13,9 +13,9 @@
 ##
 
     build.namespace=ESF
-    build.number=1072
-    build.date=1560868157942
-    build.auto.upgrade=true
+    build.number=1074
+    build.date=1561966171461
+    build.auto.upgrade=false
 
 ##
 ## Spring
