--- a/esf-fitav-portlet/docroot/WEB-INF/liferay-plugin-package.properties
+++ b/esf-fitav-portlet/docroot/WEB-INF/liferay-plugin-package.properties
@@ -1,6 +1,6 @@
 name=Esf Fitav
 module-group-id=liferay
-module-incremental-version=1
+module-incremental-version=2.2
 tags=
 short-description=
 long-description=
